# Ludere-Legacy-JP5

./: .gitignore  PAYLOAD_FORMAT.md  README.md  gradlew  settings.gradle
.github/workflows/: Autogen.yml  unzip-project.yml  wipe-and-unzip.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libretro.h  ludere_jni.c
app/src/main/java/com/ludere/legacy/: BuildConstants.java  ConfigParser.java  CoreSelector.java  MainActivity.java  PayloadConfig.java  PayloadLoader.java
app/src/main/java/com/ludere/legacy/audio/: AudioEngine.java
app/src/main/java/com/ludere/legacy/input/: InputManager.java
app/src/main/java/com/ludere/legacy/libretro/: LibretroRuntime.java
app/src/main/java/com/ludere/legacy/overlay/: OverlayAnalogStick.java  OverlayButton.java  OverlayParser.java  TouchOverlayView.java
app/src/main/java/com/ludere/legacy/saves/: SaveManager.java
app/src/main/java/com/ludere/legacy/video/: VideoRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
autogen/: generate
payload_example/: config.xml  metadata.json  overlay.xml
